[package]
name = "jassbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.5.0", features = ["markdown"] }
oops = "0.2.0"
reqwest = "0.11.11"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
urlencoding = "2.1.0"
